--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -1,24 +1,16 @@
 <section class="container text-center mb-2em" *ngIf="contrato !== undefined">
   <div class="text-right">
     <a routerLink="/registrarValidarRequisitosPago" mat-button color="primary" class="btn-regresar">
-      <img src="assets/img/icon/regresar.svg" alt="Regresar" />
+      <img src="assets/img/icon/regresar.svg" alt="Regresar">
     </a>
   </div>
   <h1 class="title-menu--h1">Ver detalle/Editar solicitud de pago {{ contrato.solicitudPagoOnly.numeroSolicitud }}</h1>
   <p class="info-sub-title supportBlack">
-    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra"
-      >Tipo de solicitud: <b>Contratos de obra</b></span
-    >
-    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria"
-      >Tipo de solicitud: <b>Contratos de interventoría</b></span
-    >
-    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos"
-      >Tipo de solicitud: <b>Otros costos/servicios</b></span
-    >
+    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Tipo de solicitud: <b>Contratos de obra</b></span>
+    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoría</b></span>
+    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos">Tipo de solicitud: <b>Otros costos/servicios</b></span>
   </p>
-  <ng-container
-    *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo !== tipoSolicitudCodigo.otrosCostos; else esOtrosCostos"
-  >
+  <ng-container *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo !== tipoSolicitudCodigo.otrosCostos; else esOtrosCostos">
     <div>
       <mat-card class="shipping-card var-main-gris">
         <mat-card-header class="header-card header-card--margin">
@@ -64,16 +56,8 @@
             </div>
             <div class="chart2">
               <p *ngIf="contrato.plazoFase1PreDias !== undefined">
-                <strong>Plazo: Meses:</strong>
-                {{
-                  (contrato.plazoFase2ConstruccionMeses !== undefined ? contrato.plazoFase2ConstruccionMeses : 0) +
-                    contrato.plazoFase1PreMeses
-                }}
-                <strong>Días:</strong>
-                {{
-                  contrato.plazoFase1PreDias +
-                    (contrato.plazoFase2ConstruccionDias !== undefined ? contrato.plazoFase2ConstruccionDias : 0)
-                }}
+                <strong>Plazo: Meses:</strong>{{ (contrato.plazoFase2ConstruccionMeses !== undefined ? contrato.plazoFase2ConstruccionMeses : 0) + contrato.plazoFase1PreMeses }}
+                <strong>Días:</strong> {{ contrato.plazoFase1PreDias + (contrato.plazoFase2ConstruccionDias !== undefined ? contrato.plazoFase2ConstruccionDias : 0) }}
               </p>
               <p *ngIf="contrato.plazoFase1PreDias === undefined">
                 <strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong>
@@ -93,31 +77,29 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>DRP</th>
                 <td mat-cell *matCellDef="let element" align="center">{{ element.enum }}</td>
               </ng-container>
+
               <ng-container matColumnDef="numDrp">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Número DRP</th>
                 <td mat-cell *matCellDef="let element" align="center">{{ element.numeroDrp }}</td>
               </ng-container>
+
               <ng-container matColumnDef="ProyectoLLaveMen">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
                 <td mat-cell *matCellDef="let element">
-                  <div
-                    class="sub-item-table justify-content-center align-items-center"
-                    *ngFor="let el of element.listDyProyectos; let i = index"
-                    [class.h-3]="el.listDyUsos.length === 1"
-                    [class.h-6]="el.listDyUsos.length === 2"
-                    [class.h-9]="el.listDyUsos.length === 3"
-                  >
-                    {{ el.nombre }}
+                  <div  class="sub-item-table justify-content-center align-items-center"
+                        *ngFor="let el of element.listDyProyectos; let i = index"
+                        [class.h-3]="el.listDyUsos.length === 1"
+                        [class.h-6]="el.listDyUsos.length === 2"
+                        [class.h-9]="el.listDyUsos.length === 3">
+                        {{ el.nombre }}
                   </div>
                 </td>
               </ng-container>
+
               <ng-container matColumnDef="NombreUso">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre uso</th>
                 <td mat-cell *matCellDef="let element" style="padding: 0 !important">
-                  <div
-                    class="sub-item-table justify-content-center align-items-center"
-                    *ngFor="let el of element.listDyProyectos; let i = index"
-                  >
+                  <div class="sub-item-table justify-content-center align-items-center" *ngFor="let el of element.listDyProyectos; let i = index">
                     <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
                       <div class="sub-item-table--element">
                         {{ el2.nombre }}
@@ -126,13 +108,11 @@
                   </div>
                 </td>
               </ng-container>
+
               <ng-container matColumnDef="valor">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
                 <td mat-cell *matCellDef="let element" style="padding: 0 !important">
-                  <div
-                    class="sub-item-table justify-content-center align-items-center"
-                    *ngFor="let el of element.listDyProyectos; let i = index"
-                  >
+                  <div class="sub-item-table justify-content-center align-items-center" *ngFor="let el of element.listDyProyectos; let i = index">
                     <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
                       <div class="sub-item-table--element">
                         ${{ el2.valorUso }}
@@ -141,13 +121,11 @@
                   </div>
                 </td>
               </ng-container>
+
               <ng-container matColumnDef="saldo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo</th>
                 <td mat-cell *matCellDef="let element" style="padding: 0 !important">
-                  <div
-                    class="sub-item-table justify-content-center align-items-center"
-                    *ngFor="let el of element.listDyProyectos; let i = index"
-                  >
+                  <div class="sub-item-table justify-content-center align-items-center" *ngFor="let el of element.listDyProyectos; let i = index">
                     <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
                       <div class="sub-item-table--element">
                         ${{ el2.saldo }}
@@ -156,10 +134,12 @@
                   </div>
                 </td>
               </ng-container>
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
           </div>
+
           <div class="tabs--actions" style="margin-top: 1em">
             <button mat-raised-button color="accent" class="tabs--btn auxBtn" (click)="this.openProyectosAsociados()">
               Ver proyectos asociados
@@ -167,6 +147,7 @@
           </div>
         </mat-card-content>
       </mat-card>
+
       <div class="text-center">
         <p class="info-container">
           <span class="info-text sin-diligenciar">Sin diligenciar</span>
@@ -183,40 +164,51 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-form-cargar-forma-de-pago
-              [contrato]="contrato"
-              [tipoSolicitud]="contrato.solicitudPagoOnly.tipoSolicitudCodigo"
-              [esUnEditar]="true"
-              [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
-              [listaMenusId]="menusIdPath"
-            >
+            <app-form-cargar-forma-de-pago  [contrato]="contrato"
+                                            [tipoSolicitud]="contrato.solicitudPagoOnly.tipoSolicitudCodigo"
+                                            [esUnEditar]="true"
+                                            [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
+                                            [listaMenusId]="menusIdPath">
             </app-form-cargar-forma-de-pago>
           </mat-expansion-panel>
-        </mat-accordion>
-        <mat-accordion>
+
           <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-              <mat-panel-title
-                class="expansion-style--title"
-                [ngClass]="
-                  tieneObservacionSemaforo === true
-                    ? 'en-proceso'
-                    : enabledAcordeon('solicitudDePago', registroCompletoAcordeones.registroCompletoFormaDePago)
-                "
-              >
+              <mat-panel-title class="expansion-style--title" [ngClass]="tieneObservacionSemaforo === true ? 'en-proceso' : enabledAcordeon('solicitudDePago', registroCompletoAcordeones.registroCompletoFormaDePago)">
                 Registrar solicitud de pago
               </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-form-registrar-solicitud-de-pago
-              [contrato]="contrato"
-              *ngIf="registroCompletoAcordeones.registroCompletoFormaDePago === true"
-              [listaMenusId]="menusIdPath"
-              [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
-              (tieneObservacionSemaforo)="tieneObservacionSemaforo = $event"
-              [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
-            >
+            <app-form-registrar-solicitud-de-pago [contrato]="contrato"
+                                                  *ngIf="registroCompletoAcordeones.registroCompletoFormaDePago === true"
+                                                  [listaMenusId]="menusIdPath"
+                                                  [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
+                                                  (tieneObservacionSemaforo)="tieneObservacionSemaforo = $event"
+                                                  [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro">
             </app-form-registrar-solicitud-de-pago>
+          </mat-expansion-panel>
+
+          <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title sin-diligenciar">
+                Descripción de la factura
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <app-form-descripcion-factura></app-form-descripcion-factura>
+          </mat-expansion-panel>
+
+          <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title sin-diligenciar">
+                Detalle factura para proyectos asociados
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <app-form-detalle-factura-proyectos [contrato]="contrato"
+                                                [listaMenusId]="menusIdPath"
+                                                [registrarSolicitudPagoObs]="listaTipoObservacionSolicitudes.registrarSolicitudPago">
+            </app-form-detalle-factura-proyectos>
           </mat-expansion-panel>
         </mat-accordion>
       </div>
