--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-decisiones-acta/tabla-decisiones-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-decisiones-acta/tabla-decisiones-acta.component.html
@@ -18,7 +18,7 @@
     <ng-container matColumnDef="departamentoMunicipio">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Departamento/Municipio </th>
       <td mat-cell *matCellDef="let element" align="center">
-        {{ element.contratacion.departamento }}/{{ element.municipio }}
+        {{ element.contratacion.departamento }}/{{ element.contratacion.municipio }}
       </td>
     </ng-container>
   
