--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -183,29 +183,29 @@
                 <mat-radio-button [value]="false" [checked]="true" class="ml-min" *ngIf="solicitudes.sesionSolicitudCompromiso.length === 0">No</mat-radio-button>
               </mat-radio-group>
             </div>
-            <div *ngIf="solicitudes.sesionSolicitudCompromiso.length > 0 && esComiteFiduciario === false" class="margin-compromisos">
-              <div *ngFor="let sesionCompromiso of solicitudes.sesionSolicitudCompromiso;let j = index" style="margin-top: 2em;">
-                <section>
-                  <h3><b>Compromiso {{ j+1 }} </b></h3>
-                  <p><b>Tarea</b>: <span class="color-blue">{{ sesionCompromiso.tarea }}</span> </p>
-                  <p><b>Responsable</b>: <span class="color-blue"> {{ sesionCompromiso.responsableSesionParticipante !== undefined ? sesionCompromiso.responsableSesionParticipante.usuario.primerNombre : '' }} {{ sesionCompromiso.responsableSesionParticipante !== undefined ? sesionCompromiso.responsableSesionParticipante.usuario.primerApellido : '' }} </span> </p>
-                  <p><b>Fecha de cumplimiento</b>: <span class="color-blue"> {{ sesionCompromiso.fechaCumplimiento | date: 'dd/MM/yyyy' }} </span> </p>
-                </section>
-              </div>
-            </div>
-            <div *ngIf="solicitudes.sesionSolicitudCompromiso.length > 0 && esComiteFiduciario === true" class="margin-compromisos">
-              <div *ngFor="let sesionCompromiso of compromisosFiduciario( solicitudes.sesionSolicitudCompromiso );let j = index" style="margin-top: 2em;">
-                <section *ngIf="sesionCompromiso.esFiduciario === true">
-                  <h3><b>Compromiso {{ j+1 }} </b></h3>
-                  <p><b>Tarea</b>: <span class="color-blue"> {{ sesionCompromiso.tarea }} </span> </p>
-                  <p><b>Responsable</b>: <span class="color-blue"> {{ sesionCompromiso.responsableSesionParticipante ? sesionCompromiso.responsableSesionParticipante.usuario.primerNombre : '' }} {{ sesionCompromiso.responsableSesionParticipante ? sesionCompromiso.responsableSesionParticipante.usuario.primerApellido : '' }} </span> </p>
-                  <p><b>Fecha de cumplimiento</b>: <span class="color-blue"> {{ sesionCompromiso.fechaCumplimiento | date: 'dd/MM/yyyy' }} </span> </p>
-                </section>
-              </div>
-            </div>
           </div>
         </div>
       </div>
 
+      <div *ngIf="solicitudes.sesionSolicitudCompromiso.length > 0 && esComiteFiduciario === false" class="margin-compromisos">
+        <div *ngFor="let sesionCompromiso of solicitudes.sesionSolicitudCompromiso;let j = index" style="margin-top: 2em;">
+          <section>
+            <h3><b>Compromiso {{ j+1 }} </b></h3>
+            <p><b>Tarea</b>: <span class="color-blue">{{ sesionCompromiso.tarea }}</span> </p>
+            <p><b>Responsable</b>: <span class="color-blue"> {{ sesionCompromiso.responsableSesionParticipante !== undefined ? sesionCompromiso.responsableSesionParticipante.usuario.primerNombre : '' }} {{ sesionCompromiso.responsableSesionParticipante !== undefined ? sesionCompromiso.responsableSesionParticipante.usuario.primerApellido : '' }} </span> </p>
+            <p><b>Fecha de cumplimiento</b>: <span class="color-blue"> {{ sesionCompromiso.fechaCumplimiento | date: 'dd/MM/yyyy' }} </span> </p>
+          </section>
+        </div>
+      </div>
+      <div *ngIf="solicitudes.sesionSolicitudCompromiso.length > 0 && esComiteFiduciario === true" class="margin-compromisos" class="mt-1em">
+        <div *ngFor="let sesionCompromiso of compromisosFiduciario( solicitudes.sesionSolicitudCompromiso );let j = index" class="mt-2em">
+          <section *ngIf="sesionCompromiso.esFiduciario === true">
+            <h3><b>Compromiso {{ j+1 }} </b></h3>
+            <p><b>Tarea</b>: <span class="color-blue"> {{ sesionCompromiso.tarea }} </span> </p>
+            <p><b>Responsable</b>: <span class="color-blue"> {{ sesionCompromiso.responsableSesionParticipante ? sesionCompromiso.responsableSesionParticipante.usuario.primerNombre : '' }} {{ sesionCompromiso.responsableSesionParticipante ? sesionCompromiso.responsableSesionParticipante.usuario.primerApellido : '' }} </span> </p>
+            <p><b>Fecha de cumplimiento</b>: <span class="color-blue"> {{ sesionCompromiso.fechaCumplimiento | date: 'dd/MM/yyyy' }} </span> </p>
+          </section>
+        </div>
+      </div>
     </mat-card-content>
 </mat-card>
