--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-sesion-comite-tecnico/tabla-sesion-comite-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-sesion-comite-tecnico/tabla-sesion-comite-tecnico.component.html
@@ -44,7 +44,7 @@
                 >
                   Ver detalle
                 </a>
-                <a *ngIf="element.estadoComiteCodigo == this.estadosComite.desarrolladaSinActa"
+                <a *ngIf="element.estadoComiteCodigo == this.estadosComite.desarrolladaSinActa || element.estadoComiteCodigo == this.estadosComite.conActaDeSesionDevulta"
                   [routerLink]="['verDetalleEditarComiteTecnico', element.id]"
                   mat-raised-button color="accent"
                   class="btn-table"
