--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -130,7 +130,8 @@
               element.contratacionObservacion,
               element.proyecto.proyectoId,
               element.proyecto.estadoProyectoObraCodigo,
-              0
+              0,
+              element.proyecto.estadoProyectoObraCodigo == estadosProyecto.AprobadoComiteFiduciario
             )
           "
           *ngIf="contratacion.tipoSolicitudCodigo === '1'"
@@ -138,8 +139,7 @@
           color="accent"
           class="btn-table"
           [disabled]="
-            element.proyecto.estadoProyectoObraCodigo == null ||
-            element.proyecto.estadoProyectoObraCodigo == estadosProyecto.AprobadoComiteFiduciario
+            element.proyecto.estadoProyectoObraCodigo == null
           "
         >
           Observaciones
@@ -154,7 +154,8 @@
               element.contratacionObservacion,
               element.proyecto.proyectoId,
               0,
-              element.proyecto.estadoProyectoInterventoriaCodigo
+              element.proyecto.estadoProyectoInterventoriaCodigo,
+              element.proyecto.estadoProyectoInterventoriaCodigo == estadosProyecto.AprobadoComiteFiduciario
             )
           "
           *ngIf="contratacion.tipoSolicitudCodigo === '2'"
@@ -162,8 +163,7 @@
           color="accent"
           class="btn-table"
           [disabled]="
-            element.proyecto.estadoProyectoInterventoriaCodigo == null ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == estadosProyecto.AprobadoComiteFiduciario
+            element.proyecto.estadoProyectoInterventoriaCodigo == null
           "
         >
           Observaciones
