--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/table-control-recursos/table-control-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/table-control-recursos/table-control-recursos.component.html
@@ -21,8 +21,8 @@
       </ng-container>
 
       <ng-container matColumnDef="aportanteId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre de la cuenta</th>
-        <td mat-cell *matCellDef="let element">{{ element.aportanteId }}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Número de la cuenta</th>
+        <td mat-cell *matCellDef="let element">{{ element.numeroCuentaBanco }}</td>
       </ng-container>
 
       <ng-container matColumnDef="numeroRp">
