--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
@@ -8,23 +8,18 @@
       Observaciones para la devolución o rechazo del proyecto
     </h1>
     <b class="sub-text">
-      Ampliación
-      Atlántico/Manatí
-      I.E Antonio Nariño
-      Única sede
-      Devuelto por el comité
+      {{ institucionEducativa }}
+      {{ sede }}
+      {{ departamento }}
+      {{ estadoProyectoObraString }}
     </b>
   </div>
   <div class="table-responsive">
     <table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2">
       <thead>
         <tr class="mat-header-row cdk-header-row ng-star-inserted">
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Miembro participante
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Observación
-          </th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">Miembro participante</th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">Observación</th>
         </tr>
       </thead>
       <tbody>
@@ -43,21 +38,23 @@
   <div class="d-flex align-items-center" *ngIf="verDetalle === false">
     <div class="text-area-quill">
       <label for="alcanceParticular" class="text-area-quill--label">Nueva observación</label>
-      <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config"
-        (onContentChanged)="maxLength($event, 3000)" [(ngModel)]="observacion"></quill-editor>
+      <quill-editor
+        class="quill-editor-style"
+        [styles]="editorStyle"
+        [modules]="config"
+        (onContentChanged)="maxLength($event, 3000)"
+        [(ngModel)]="observacion"
+      ></quill-editor>
     </div>
     <span class="contador miles" *ngIf="observacion">
       {{ 3000 - (textoLimpio(observacion) > 3000 ? 3000 : textoLimpio(observacion)) }}
     </span>
-    <span class="contador miles" *ngIf="!observacion">
-      3000
-    </span>
+    <span class="contador miles" *ngIf="!observacion"> 3000 </span>
   </div>
 
   <div class="text-center" *ngIf="verDetalle === false">
     <button mat-button color="warn" class="btn-guardar" (click)="enviarObservacion()">
-      <img src="assets/img/icon/guardar.svg" alt="Guardar">
+      <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
-
 </section>
